fixing soft skills alignment for larger screens

--- a/style/about.css
+++ b/style/about.css
@@ -401,7 +401,6 @@ body {
     .softSkills_container {
         flex-direction: column; 
         width: 90%; 
-        height: auto; 
         display: grid;
         justify-items: center;
         padding: 5px;
@@ -599,8 +598,10 @@ body {
 .softSkillsTitle {
     margin-top: 2%;
     padding-bottom: 20px;
+    text-align: center;
 }
 .courseworkTitle {
+    text-align: center;
     margin-top: -5%;
     padding-bottom: 20px;
 }
